# webby

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  README.md  compose.yml
.github/workflows/: rust.yml
public/: index.html
src/: auth.rs  errors.rs  main.rs  models.rs  test.rs
src/handlers/: admin.rs  authentication.rs  items.rs  mod.rs  users.rs
