[package]
name = "webby"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = ["full"] }
tower-http = { version = "0.6.10", features = ["trace", "timeout"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
validator = { version = "0.20.0", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"
tower = "0.5.3"
