[package]
name = "webby"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
serde = { version = "1.0.228", features = ["derive"] }
toasty = { version = "=0.6.1", features = ["sqlite"] }
tokio = { version = "1.52.3", features = ["full"] }
tower-http = { version = "0.7.0", features = ["trace", "timeout", "fs"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
validator = { version = "0.20.0", features = ["derive"] }
tower = { version = "0.5.3", features = ["limit"] }
tower_governor = "0.8.0"
serde_json = "1.0"
jsonwebtoken = { version = "10.4.0", features = ["aws_lc_rs"] }
axum-extra = { version = "0.12.6", features = ["typed-header"] }
dotenvy = "0.15.7"
rand = "0.8"
argon2 = "0.5.3"
